crates/mabo-compiler/tests/snapshots/compiler__error_resolve@import_root.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "use datetime::Other;"
input_file: crates/mabo-compiler/tests/inputs/resolve/import_root.mabo
---
  × type resolution failed
  ├─▶ failed resolving import statement
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭datetime❬Y❭
   ╭─[import_root.mabo:1:1]
 1 │ use datetime::Other;
   ·               ──┬──
   ·                 ╰── used here
   ╰────

