crates/mabo-compiler/tests/snapshots/compiler__error_resolve@import_sub_type.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: "use datetime::timing::Other;"
input_file: crates/mabo-compiler/tests/inputs/resolve/import_sub_type.mabo
---
  × type resolution failed
  ├─▶ failed resolving import statement
  ╰─▶ definition ❬Y❭Other❬Y❭ not found in module ❬Y❭datetime::timing❬Y❭
   ╭─[resolve/import_sub_type.mabo:1:23]
 1 │ use datetime::timing::Other;
   ·                       ──┬──
   ·                         ╰── used here
   ╰────
