crates/mabo-compiler/tests/snapshots/compiler__error_validate@alias_tuple_empty.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: alias Sample = ();
input_file: crates/mabo-compiler/tests/inputs/validate/alias_tuple_empty.mabo
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭zero elements❬W❭ are invalid
   ╭─[alias_tuple_empty.mabo:1:16]
 1 │ alias Sample = ();
   ·                ─┬
   ·                 ╰── declared here
   ╰────
  help: a tuple must have between 2 and 12 elements

