crates/mabo-compiler/tests/snapshots/compiler__error_validate@alias_tuple_single.mabo.snap
---
source: crates/mabo-compiler/tests/compiler.rs
description: alias Sample = (u8);
input_file: crates/mabo-compiler/tests/inputs/validate/alias_tuple_single.mabo
---
  × invalid tuple element size found
  ╰─▶ tuples with ❬W❭a single element❬W❭ are invalid
   ╭─[alias_tuple_single.mabo:1:16]
 1 │ alias Sample = (u8);
   ·                ──┬─
   ·                  ╰── declared here
   ╰────
  help: a tuple must have between 2 and 12 elements

